[gd_scene load_steps=7 format=3 uid="uid://c5a3sru28tgek"]

[ext_resource type="Script" uid="uid://l553u7nkk184" path="res://scripts/ui/scene_update.gd" id="1_2pcvu"]
[ext_resource type="Texture2D" uid="uid://brmqilfnkk1e3" path="res://assets/ui/basic_hurt.png" id="1_g7jgs"]
[ext_resource type="Texture2D" uid="uid://cjr74ja6s2k4l" path="res://assets/art/items/gold.png" id="2_eehsl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wa424"]
bg_color = Color(0.577, 0.681, 0.741, 0.359)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eehsl"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2pcvu"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.0807833, 0.0807834, 0.0807833, 1)

[node name="scene_update" type="CanvasLayer"]
script = ExtResource("1_2pcvu")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.26)

[node name="update" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -57.0
offset_top = 162.0
offset_right = 57.0
offset_bottom = 231.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "升级!"

[node name="attr_items_choose" type="GridContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 111.0
offset_top = -235.0
offset_right = -512.0
offset_bottom = 242.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 20
columns = 4
metadata/_edit_group_ = true

[node name="attr_items_template" type="Panel" parent="attr_items_choose"]
custom_minimum_size = Vector2(0, 280)
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="attr_items_choose/attr_items_template"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 87.0
offset_top = -63.0
offset_right = -87.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_wa424")
text = "选择"

[node name="MarginContainer" type="MarginContainer" parent="attr_items_choose/attr_items_template"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 178.0
grow_horizontal = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="attr_items_choose/attr_items_template/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="attr_items_choose/attr_items_template/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_g7jgs")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="attr_items_choose/attr_items_template/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label2" type="Label" parent="attr_items_choose/attr_items_template/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "攻击力"

[node name="Label" type="Label" parent="attr_items_choose/attr_items_template/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.604295, 0.366249, 0.165599, 1)
theme_override_font_sizes/font_size = 20
text = "升级"

[node name="RichTextLabel" type="RichTextLabel" parent="attr_items_choose/attr_items_template"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 18.0
offset_top = 35.0
offset_right = -10.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[color=green]+3 [/color]基础伤害"
fit_content = true

[node name="reflesh" type="Button" parent="."]
offset_left = 731.0
offset_top = 674.0
offset_right = 989.0
offset_bottom = 745.0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/hover = SubResource("StyleBoxFlat_eehsl")
theme_override_styles/normal = SubResource("StyleBoxFlat_2pcvu")
text = "刷新 -2"
alignment = 0
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="reflesh"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -62.5
offset_right = -53.0
offset_bottom = 1.5
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(2, 2)
texture = ExtResource("2_eehsl")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -471.0
offset_top = -341.0
offset_right = -39.0
offset_bottom = 341.0
grow_horizontal = 0
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 2
offset_right = 432.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 50
text = "属性"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 101.0
offset_bottom = 681.0
grow_horizontal = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="attr_list" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="attr_template" type="HBoxContainer" parent="Panel/MarginContainer/attr_list"]
layout_mode = 2

[node name="name" type="Label" parent="Panel/MarginContainer/attr_list/attr_template"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "最大血量"

[node name="vaule" type="Label" parent="Panel/MarginContainer/attr_list/attr_template"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.202753, 0.524015, 0.435253, 1)
theme_override_font_sizes/font_size = 30
text = "100"
horizontal_alignment = 2

[node name="continue_button" type="Button" parent="."]
offset_left = 1706.0
offset_top = 932.0
offset_right = 1841.0
offset_bottom = 982.0
theme_override_font_sizes/font_size = 30
text = "继续
"
